--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sanitize-html": "^2.16.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -23,7 +24,9 @@
     "joi": "^17.13.3",
     "morgan": "^1.10.1",
     "node-pg-migrate": "^8.0.3",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "sanitize-html": "^2.17.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
